I don't always debug my code but when I do I do it in production

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="unite">
 						<div class="content">
 							<h2 style="font-family:middleearthmedium;">Save the Date</h2>
-							<p>Mark your calendars! We are planning a wedding and celebration feast to be held in <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Iowa City, Iowa</a> on President's Day weekend <u>Sunday February 14, 2021</u>. The wedding ceremony and reception will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a> in the Double Round Barn. Please check back soon for information about a hotel block at a nearby hotel with shuttle service to the venue.</p>
+							<p>Mark your calendars! We are planning a wedding and celebration feast to be held in <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Iowa City, Iowa</a> on <u>Sunday February 14, 2021</u> (President's Day weekend). The wedding ceremony and reception will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a> in the Double Round Barn. Please check back soon for information about a hotel block at a nearby hotel with shuttle service to the venue.</p>
 							<div title="Add to Calendar" class="addeventatc">
 								Add to Calendar
 								<span class="start">02/14/2021 1:00 PM</span>
@@ -67,7 +67,6 @@
 								<span class="description">Amber Aldrich and Benjamin Holland are getting married. Celebration and feast afterwards! Venue and reception will be held at the Celebration Farm (https://www.thecelebrationfarm.com) in the Double Round Barn.</span>
 								<span class="location">4696 Robin Woods Ln NE, Iowa City, IA 52240</span>
 							</div>
-							<br />
 						</div>
 						<div class="image">
 							<img src="images/hands.png" alt="" />
@@ -77,7 +76,17 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="party-business">
 						<div class="content">
 							<h2 style="font-family:party_businessregular;">An Unexpected Journey</h2>
-							<p>TODO</p>
+							<p>Ben and Amber met online in June 2014 just as it was becoming the norm for many. They set their first date across town at a local Irish restaurant. Ben had an unusually great day at work and even left early so he'd have plenty of time to show up early. However, on his way home his car broke down. Amber had a normal day of classes at University and was surprised to get a text from Ben saying that he was having his car towed to the mechanic and would be late. Thinking Ben was trying to get out of the date, she suggested that they postpone, but Ben insisted that he'd be able to make it. Ben decided to bicycle across town on that hot humid day and arrived for dinner late, sweaty, and off his "game".</p>
+
+<p>Amber and Ben officially started dating on the 4th of July and then one month later Ben took Amber to Chicago for their first weekend date on a "choose your own adventure" itinerary he had planned out. Included was a front row seat at <a href="https://www.medievaltimes.com/">Medieval Times</a>, which was the original motivation for the trip. The next day Amber chose the <a href="https://www.carnivalechicago.com/">Carnivalé</a> dinner restaurant where they tried an amazing appetizer of seared octopus that set them on an ongoing culinary quest for delicious foods.</p>
+
+<p>No matter where life took them over the next few years, Ben and Amber always made a point to go back to Chicago and visit Medieval Times each year. Amber graduated and Ben went back to school. After Ben finally graduated the two moved to Virginia in 2019 for a new adventure. After the move, Amber thought it was the end of their yearly trip. Ben had other plans and suggested they go to Chicago and Medieval Times as usual.</p>
+ 
+<p>Ben planned a "greatest hits" tour of Chicago and decided he would propose at the Carnivalé restaurant in downtown Chicago on Friday night, but like the first date nothing went according to his plan. On Friday morning Amber and Ben boarded an early flight from Baltimore to a layover in North Carolina. After the connecting flight was rescheduled because the "plane was missing a part" Ben began to panic inside a little bit. After boarding the second flight, which eventually turned around and returned to the gate after taxing for takeoff, Ben began to panic inside a lot. Ben ran off to call the restaurant who thankfully had a "do anything for this customer" note on his reservation to tell them they would be late and then shaved, changed his clothes, and brushed his teeth in the airport bathroom. Amber also had to change her outfit in the airport bathroom while Ben snuck the ring into his pocket.</p>
+ 
+<p>When the plane finally landed eight hours late, the city was deadlocked in traffic due to two major accidents in rush hour. After fighting traffic Ben and Amber finally made it late to their rescheduled reservation. The couple was greeted by the manager who happily wished Amber a Happy Birthday (it wasn't her birthday), which confused the couple and panicked Ben even more since he thought they confused his plans with another reservation.</p>
+ 
+<p>Ben had arranged for the staff to bring out the same dish of octopus they had tried years earlier. The plan was to give the manager his camera to record the proposal under the guise of taking a photo together. After seeing the plate of octopus Amber suggested taking a photo, so Ben decided to go for it. He handed the wait staff his camera and got down on one knee, sweaty and off his "game" and then all he could think to say was: "I love you." After some prodding, he remembered to actually ask the question and of course Amber said yes.</p>
 						</div>
 						<div class="image">
 							<img src="images/announcement.png" alt="" />
@@ -106,12 +115,12 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/snake_full.png" class="image">
-										<img src="images/gallery/thumbs/snake_thumb.png" alt="" />
+									<a href="images/gallery/fulls/cherry_blossoms_japan_2017_full.png" class="image">
+										<img src="images/gallery/thumbs/cherry_blossoms_japan_2017_thumb.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Iron Snake with Saphire Crown</h3>
-										<p>One of Amber's spirit animals is definitely a snake.</p>
+										<h3>Cherry Blossoms in Japan 2017</h3>
+										<p>Our first international trip together!</p>
 									</div>
 								</article>
 								<article>
@@ -121,15 +130,7 @@
 									<div class="caption">
 										<h3>Amber said yes!</h3>
 										<p>Proposal on October 4th 2019 at Carnivalé Chicago</p>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/renfaire_after_dark_2018_full.png" class="image">
-										<img src="images/gallery/thumbs/renfaire_after_dark_2018_thumb.png" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Renfaire After Dark 2018</h3>
-										<p>Renaissance fair with camping? Yes, please.</p>
+										<p>It only took Ben 1918 days to propose!</p>
 									</div>
 								</article>
 								<article>
@@ -139,6 +140,24 @@
 									<div class="caption">
 										<h3>The Conditions of Engagement</h3>
 										<p>Ben forgot to read the fine print.</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/snake_full.png" class="image">
+										<img src="images/gallery/thumbs/snake_thumb.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Iron Snake with Saphire Crown</h3>
+										<p>One of Amber's spirit animals is definitely a snake.</p>
+									</div>
+								</article>
+								<article>
+									<a href="images/gallery/fulls/renfaire_after_dark_2018_full.png" class="image">
+										<img src="images/gallery/thumbs/renfaire_after_dark_2018_thumb.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Renfaire After Dark 2018</h3>
+										<p>Renaissance fair with camping? Yes, please.</p>
 									</div>
 								</article>
 								<article>
@@ -157,15 +176,6 @@
 									<div class="caption">
 										<h3>Ben Caving in Mammoth Caves Kentucky 2014</h3>
 										<p>It was too tight to take a photo together...</p>
-									</div>
-								</article>
-								<article>
-									<a href="images/gallery/fulls/cherry_blossoms_japan_2017_full.png" class="image">
-										<img src="images/gallery/thumbs/cherry_blossoms_japan_2017_thumb.png" alt="" />
-									</a>
-									<div class="caption">
-										<h3>Cherry Blossoms in Japan 2017</h3>
-										<p>Our first international trip together!</p>
 									</div>
 								</article>
 								<article>
