--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,7 +75,7 @@
 
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="party-business">
 						<div class="content">
-							<h2 style="font-family:middleearthmedium;">An Unexpected Journey</h2>
+							<h2 style="font-family:party_businessregular;">An Unexpected Journey</h2>
 							<p>Ben and Amber met online in June 2014 just as it was becoming the norm for many. They set their first date across town at a local Irish restaurant. Ben had an unusually great day at work and even left early so he'd have plenty of time to show up early. However, on his way home his car broke down. Amber had a normal day of classes at University and was surprised to get a text from Ben saying that he was having his car towed to the mechanic and would be late. Thinking Ben was trying to get out of the date, she suggested that they postpone, but Ben insisted that he'd be able to make it. Ben decided to bicycle across town on that hot humid day and arrived for dinner late, sweaty, and off his "game".</p>
 
 <p>Amber and Ben officially started dating on the 4th of July and then one month later Ben took Amber to Chicago for their first weekend date on a "choose your own adventure" itinerary he had planned out. Included was a front row seat at <a href="https://www.medievaltimes.com/">Medieval Times</a>, which was the original motivation for the trip. The next day Amber chose the <a href="https://www.carnivalechicago.com/">Carnivalé</a> dinner restaurant where they tried an amazing appetizer of seared octopus that set them on an ongoing culinary quest for delicious foods.</p>
@@ -106,7 +106,7 @@
 
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2 style="font-family:middleearthmedium;">Your Presence is Requested</h2>
+							<h2 style="font-family:ringbearermedium;">Your Presence is Requested</h2>
 							<p>We understand that not every guest will be able join us for this special occasion. Braving an Iowa winter is not a journey for the weak hearted...</p>
 							<p>You won't find a registry because your presence is more than enough of a gift. If you are able to come for the ceremony and stay for the after-dinner festivities you will be helping to start the next chapter in our story.</p>
 							<p>Seriously, do not bring a gift. We have to take everything back to Virginia. Cards are welcome if you absolutely feel the need.</p>
