--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,18 +55,8 @@
 
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="unite">
 						<div class="content">
-							<h2 style="font-family:middleearthmedium;">Save the Date</h2>
-							<p>Mark your calendars! We are planning a wedding and celebration feast to be held in <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Iowa City, Iowa</a> on <u>Sunday February 14, 2021</u> (President's Day weekend). The wedding ceremony and reception will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a> in the Double Round Barn. Please check back soon for information about a hotel block at a nearby hotel with shuttle service to the venue.</p>
-							<div title="Add to Calendar" class="addeventatc">
-								Add to Calendar
-								<span class="start">02/14/2021 1:00 PM</span>
-								<span class="end">02/14/2021 11:00 PM</span>
-								<span class="all_day_event">true</span>
-								<span class="timezone">America/Chicago</span>
-								<span class="title">Amber and Ben Wedding</span>
-								<span class="description">Amber Aldrich and Benjamin Holland are getting married. Celebration and feast afterwards! Venue and reception will be held at the Celebration Farm (https://www.thecelebrationfarm.com) in the Double Round Barn.</span>
-								<span class="location">4696 Robin Woods Ln NE, Iowa City, IA 52240</span>
-							</div>
+							<h2 style="font-family:middleearthmedium;">Save the "New" Date</h2>
+							<p>Update your calendars! We are now planning a celebration feast to be held in <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Iowa City, Iowa</a> on <del>Sunday February 14, 2021</del> <u>Sunday February 20, 2022</u> (President's Day weekend 2022). A vow renewal and reception will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a> in the Double Round Barn. Please check back in the future for information about a hotel block at a nearby hotel with shuttle service to the venue.</p>
 						</div>
 						<div class="image">
 							<img src="images/hands.png" alt="" />
