--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,8 +55,8 @@
 
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="unite">
 						<div class="content">
-							<h2 style="font-family:middleearthmedium;">Save the "New" Date</h2>
-							<p>Update your calendars! We are now planning a celebration feast to be held in <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Iowa City, Iowa</a> on <del>Sunday February 14, 2021</del> <u>Sunday February 20, 2022</u> (President's Day weekend 2022). A vow renewal and reception will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a> in the Double Round Barn. Please check back in the future for information about a hotel block at a nearby hotel with shuttle service to the venue.</p>
+							<h2 style="font-family:middleearthmedium;">Save the "Final" Date</h2>
+							<p>Update your calendars! We are now planning a celebration feast to be held in <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Iowa City, Iowa</a> on <u>Friday September 9th, 2022</u>. A vow renewal and reception will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a> in the Double Round Barn. Please check back in the future for information about a hotel block.</p>
 						</div>
 						<div class="image">
 							<img src="images/hands.png" alt="" />
