--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
 
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="party-business">
 						<div class="content">
-							<h2 style="font-family:party_businessregular;">An Unexpected Journey</h2>
+							<h2 style="font-family:middleearthmedium;">An Unexpected Journey</h2>
 							<p>Ben and Amber met online in June 2014 just as it was becoming the norm for many. They set their first date across town at a local Irish restaurant. Ben had an unusually great day at work and even left early so he'd have plenty of time to show up early. However, on his way home his car broke down. Amber had a normal day of classes at University and was surprised to get a text from Ben saying that he was having his car towed to the mechanic and would be late. Thinking Ben was trying to get out of the date, she suggested that they postpone, but Ben insisted that he'd be able to make it. Ben decided to bicycle across town on that hot humid day and arrived for dinner late, sweaty, and off his "game".</p>
 
 <p>Amber and Ben officially started dating on the 4th of July and then one month later Ben took Amber to Chicago for their first weekend date on a "choose your own adventure" itinerary he had planned out. Included was a front row seat at <a href="https://www.medievaltimes.com/">Medieval Times</a>, which was the original motivation for the trip. The next day Amber chose the <a href="https://www.carnivalechicago.com/">Carnivalé</a> dinner restaurant where they tried an amazing appetizer of seared octopus that set them on an ongoing culinary quest for delicious foods.</p>
@@ -82,24 +82,33 @@
 							<img src="images/announcement.png" alt="" />
 						</div>
 					</section>
-
+					
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="winter">
 						<div class="content">
-							<h2 style="font-family:game_of_thronesregular;">Winter&nbsp;&nbsp;Is&nbsp;&nbsp;Coming</h2>
-							<p>Iowa winters are <i>cold</i>. Bring a jacket or your warmest fur. Dress attire is Hobbit Formal. We'll let you know when we know what that means.</p>
-							<p>Settle down with us for a night of feasting, drinking, dancing, laughing, a toasty fire, and the loving companionship of friends and family.</p>
+							<h2 style="font-family:middleearthmedium;">We Eloped!</h2>
+							<p>Not wanting to wait any longer, Ben and Amber decided to get married on their own. While they both wished their friends and family could have joined, their elopement ceremony offered a unique experience. In early October 2020, Amber and Ben rented a secluded cabin on a lake just outside of Shenandoah National Park. The night before the ceremony Ben and Amber each wrote their vows in a pair of handmade journals while enjoying the heat of a wood stove. Very early in the morning Ben cooked a bacon and egg breakfast from a cast iron skillet.</p>
 						</div>
 						<div class="image">
-							<img src="images/winter.png" alt="" />
+							<img src="images/lanterns.png" alt="" />
+						</div>
+					</section>
+					
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="party-business">
+						<div class="content">
+							<h2 style="font-family:middleearthmedium;">A New Family</h2>
+							<p>Amber got dressed and left to meet the photographer and officiant at the trail head of Blackrock Summit in the heart of Shenandoah National Park. The half hour drive through the park was made even more special by a heavy fog that blanketed the forest from the light rain the night before. After lighting two lanterns, the couple hiked a mile to the summit just in time for sunrise. Together, they read their vows to one another on the first day of their new lives together, both looking forward to their future role as parents.</p>
+						</div>
+						<div class="image">
+							<img src="images/married.png" alt="" />
 						</div>
 					</section>
 
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2 style="font-family:ringbearermedium;">Your Presence is Requested</h2>
-							<p>We understand that not every guest will be able join us for this special occasion. Braving an Iowa winter is not a journey for the weak hearted...</p>
-							<p>You won't find a registry because your presence is more than enough of a gift. If you are able to come for the ceremony and stay for the after-dinner festivities you will be helping to start the next chapter in our story.</p>
-							<p>Seriously, do not bring a gift. We have to take everything back to Virginia. Cards are welcome if you absolutely feel the need.</p>
+							<h2 style="font-family:middleearthmedium;">Your Presence is Requested</h2>
+							<p>We understand that not every guest will be able join us for this special occasion. Above everything, we wish to have a safe reception. We will be monitoring the COVID situation and may request our guests to take additional precautions to protect each other and our little ones.</p>
+							<p>You won't find a registry because your presence is more than enough of a gift. If you are able to come to share in our belated celebration dinner or stay for the after-dinner festivities you will be helping to start the next chapter in our story.</p>
+							<p>Settle down with us for a night of feasting, drinking, dancing, laughing, and the loving companionship of friends and family.</p>
 						</div>
 
 						<!-- Gallery -->
