--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,7 +96,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="party-business">
 						<div class="content">
 							<h2 style="font-family:middleearthmedium;">A New Family</h2>
-							<p>Amber got dressed and left to meet the photographer and officiant at the trail head of Blackrock Summit in the heart of Shenandoah National Park. The half hour drive through the park was made even more special by a heavy fog that blanketed the forest from the light rain the night before. After lighting two lanterns, the couple hiked a mile to the summit just in time for sunrise. Together, they read their vows to one another on the first day of their new lives together, both looking forward to their future role as parents.</p>
+							<p>Ben and Amber got dressed and left to meet the photographer and officiant at the trail head of Blackrock Summit in the heart of Shenandoah National Park. The half hour drive through the park was made even more special by a heavy fog that blanketed the forest from the light rain the night before. After lighting two lanterns, the couple hiked a mile to the summit just in time for sunrise. Together, they read their vows to one another on the first day of their new lives together, both looking forward to their future role as parents.</p>
 						</div>
 						<div class="image">
 							<img src="images/married.png" alt="" />
