--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,11 +55,76 @@
 
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="unite">
 						<div class="content">
-							<h2 style="font-family:middleearthmedium;">Save the "Final" Date</h2>
-							<p>Update your calendars! We are now planning a celebration feast to be held in <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Iowa City, Iowa</a> on <u>Friday September 9th, 2022</u>. A vow renewal and reception will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a> in the Double Round Barn. Please check back in the future for information about a hotel block.</p>
+							<h2 style="font-family:middleearthmedium;">Your Presence is Requested</h2>
+							<p>We are hosting a celebration feast to be held in <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Iowa City, Iowa</a> on <u>Friday September 9th, 2022</u>. A vow renewal and wedding reception will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a> in the Double Round Barn.</p>
+							<p>We understand that not every guest will be able join us for this special occasion, but we invite you to settle down with us for a night of feasting, drinking, dancing, laughing, and the loving companionship of friends and family.</p>
+							<p>Please <a href="/rsvp" target="_blank">RSVP</a> your attendance before Monday, August 22nd 2022.</p>
+							<ul class="actions stacked">
+								<li><a href="/rsvp" target="_blank" class="button big wide smooth-scroll-middle" style="font-family:middleearthmedium;">RSVP Online</a></li>
+							</ul>
 						</div>
 						<div class="image">
 							<img src="images/hands.png" alt="" />
+						</div>
+					</section>
+					
+					<section class="wrapper style1 align-center">
+						<div class="inner">
+							<h2 style="font-family:middleearthmedium;">Vow Renewal &amp; Wedding Reception</h2>
+	
+							<center>
+							<div style="max-width:75%">
+
+							<div style="font-family:Source Sans Pro; font-size: 20px">September 9, 2022 at 3:30 PM–11:00 PM</div>
+							<pre style="font-family:Source Sans Pro; font-size: 20px">The Celebration Farm (Double Round Barn)
+<a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">4696 Robin Woods Lane NE, Iowa City, IA, 52245</a></pre>
+
+							<h3 style="font-family:middleearthmedium;">Schedule</h3>
+							<table>
+							  <tbody>
+							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
+								<td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">3:30 PM–4:00 PM</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">Seating</td>
+							  </tr>
+							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">4:00 PM–4:15 PM</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">Vow Renewal Ceremony</td>
+							  </tr>
+							  <tr style="border-bottom: 1px solid black;">
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">4:30 PM–5:30 PM</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">Cocktail Hour</td>
+							  </tr>
+							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">5:30 PM–6:30 PM</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">Dinner</td>
+							  </tr>
+							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">6:30 PM–11:00 PM</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">Evening Festivities</td>
+							  </tr>
+							</tbody>
+							</table>
+							
+							<h3 style="font-family:middleearthmedium;">Dress Attire: Hobbit Formal</h3>
+							<p>Guests are encouraged to wear attire that fits a modern formal or black-tie optional dress code. Men should wear a suit with a shirt and tie or alternatively a suit jacket. Women should wear a floor-length gown, knee-length cocktail dress, a pantsuit, dressy separates, or other culturally appropriate attire. Alternatively, guests may wear medieval or renaissance period appropriate attire suitable for a prominent social gathering.</p>
+							
+							<h2 style="font-family:middleearthmedium;">Venue &amp; Lodging</h2>
+							<p>Free day of (and overnight) parking is available at the <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Celebration Farm</a> venue. For guests attending from out of town or for local guests wishing to lodge closer to the venue, please note that the weekend coincides with the Iowa / Iowa State Football game in Iowa City so lodging in the area will be subject to higher rates and restricted availability. <b>It is highly encouraged to book accommodations early.</b> Guests may wish to consider hotel options outside of Iowa City (e.g. Cedar Rapids).</p>
+							
+							<h2 style="font-family:middleearthmedium;">Important Remarks</h2>
+							
+							<h3 style="font-family:middleearthmedium;">A Special Request</h3>
+							<p>All guests are encouraged to bring a historic drinking vessel for personal use throughout the evening. Examples of drinking vessels include a Viking drinking horn, wooden mug, chalice or goblet, skull of your enemy, etc.</p>
+							
+							<h3 style="font-family:middleearthmedium;">COVID Policy</h3>
+							<p>We understand that not every guest will be able join us for this special occasion. Above everything, we wish to have a safe reception. We wish to minimize the risk to our guests and also recognize that every family must make a personal choice. We will be monitoring the COVID situation and may request our guests to take additional precautions to protect each other and our little ones. Finally, we ask that any guests with COVID symptoms please do not attend.</p>
+							
+							<h3 style="font-family:middleearthmedium;">Gift Registry</h3>
+							<p>You won't find a gift registry because your presence is more than enough of a gift. If you are able to come to share in our belated celebration dinner or stay for the after-dinner festivities you will be helping to start the next chapter in our story.</p>
+
+							</div>
+							</center>
+							
 						</div>
 					</section>
 
@@ -102,15 +167,15 @@
 							<img src="images/married.png" alt="" />
 						</div>
 					</section>
-
+					
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2 style="font-family:middleearthmedium;">Your Presence is Requested</h2>
-							<p>We understand that not every guest will be able join us for this special occasion. Above everything, we wish to have a safe reception. We will be monitoring the COVID situation and may request our guests to take additional precautions to protect each other and our little ones.</p>
-							<p>You won't find a registry because your presence is more than enough of a gift. If you are able to come to share in our belated celebration dinner or stay for the after-dinner festivities you will be helping to start the next chapter in our story.</p>
-							<p>Settle down with us for a night of feasting, drinking, dancing, laughing, and the loving companionship of friends and family.</p>
+							<h2 style="font-family:middleearthmedium;">Special Thanks</h2>
+							<p>We wish to give special thanks to all of our friends and family for their love and support.</p>
 						</div>
+					</section>
 
+					<section class="wrapper style1 align-center">
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
