--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,7 +90,7 @@
 							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">4:00 PM–4:15 PM</td>
 							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">Vow Renewal Ceremony</td>
 							  </tr>
-							  <tr style="border-bottom: 1px solid black;">
+							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
 							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">4:30 PM–5:30 PM</td>
 							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">Cocktail Hour</td>
 							  </tr>
