styling for mobile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
 							<p>We understand that not every guest will be able join us for this special occasion, but we invite you to settle down with us for a night of feasting, drinking, dancing, laughing, and the loving companionship of friends and family.</p>
 							<p>Please <a href="/rsvp" target="_blank">RSVP</a> your attendance before Monday, August 22nd 2022.</p>
 							<ul class="actions stacked">
-								<li><a href="/rsvp" target="_blank" class="button big wide smooth-scroll-middle" style="font-family:middleearthmedium;">RSVP Online</a></li>
+								<li><a href="/rsvp" class="button big wide smooth-scroll-middle" style="font-family:middleearthmedium;">RSVP Online</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -76,15 +76,16 @@
 							<div style="max-width:75%">
 
 							<div style="font-family:Source Sans Pro; font-size: 20px">September 9, 2022 at 3:30 PM–11:00 PM</div>
-							<pre style="font-family:Source Sans Pro; font-size: 20px">The Celebration Farm (Double Round Barn)
-<a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">4696 Robin Woods Lane NE, Iowa City, IA, 52245</a></pre>
+							<div style="font-family:Source Sans Pro; font-size: 20px">The Celebration Farm (Double Round Barn)</div>
+							<div style="font-family:Source Sans Pro; font-size: 20px"><a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">4696 Robin Woods Lane NE, Iowa City, IA, 52245</a></div>
+							<br/>
 
 							<h3 style="font-family:middleearthmedium;">Schedule</h3>
 							<table>
 							  <tbody>
 							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
 								<td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">3:30 PM–4:00 PM</td>
-							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">Seating</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">Arrival &amp; Seating</td>
 							  </tr>
 							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
 							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">4:00 PM–4:15 PM</td>
@@ -96,7 +97,7 @@
 							  </tr>
 							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
 							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">5:30 PM–6:30 PM</td>
-							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">Dinner</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">Dinner &amp; Dessert</td>
 							  </tr>
 							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
 							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">6:30 PM–11:00 PM</td>
