--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,15 +73,15 @@
 							<h2 style="font-family:middleearthmedium;">Vow Renewal &amp; Wedding Reception</h2>
 	
 							<center>
-							<div style="max-width:75%">
+							<div style="max-width:65%">
 
 							<div style="font-family:Source Sans Pro; font-size: 20px">September 9, 2022 at 3:30 PM–11:00 PM</div>
-							<div style="font-family:Source Sans Pro; font-size: 20px">The Celebration Farm (Double Round Barn)</div>
+							<div style="font-family:Source Sans Pro; font-size: 20px">Celebration Farm (Double Round Barn)</div>
 							<div style="font-family:Source Sans Pro; font-size: 20px"><a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">4696 Robin Woods Lane NE, Iowa City, IA, 52245</a></div>
 							<br/>
 
 							<h3 style="font-family:middleearthmedium;">Schedule</h3>
-							<table>
+							<table style="max-width:420px">
 							  <tbody>
 							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
 								<td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">3:30 PM–4:00 PM</td>
