--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,24 +84,24 @@
 							<table style="max-width:420px">
 							  <tbody>
 							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
-								<td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">3:30 PM–4:00 PM</td>
-							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">Arrival &amp; Seating</td>
+								<td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">3:30 PM–4:00 PM</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">Arrival &amp; Seating</td>
 							  </tr>
 							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
-							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">4:00 PM–4:15 PM</td>
-							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">Vow Renewal Ceremony</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">4:00 PM–4:15 PM</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">Vow Renewal Ceremony</td>
 							  </tr>
 							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
-							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">4:30 PM–5:30 PM</td>
-							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">Cocktail Hour</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">4:30 PM–5:30 PM</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">Cocktail Hour</td>
 							  </tr>
 							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
-							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">5:30 PM–6:30 PM</td>
-							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">Dinner &amp; Dessert</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">5:30 PM–6:30 PM</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">Dinner &amp; Dessert</td>
 							  </tr>
 							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
-							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">6:30 PM–11:00 PM</td>
-							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center;">Evening Festivities</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">6:30 PM–11:00 PM</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">Evening Festivities</td>
 							  </tr>
 							</tbody>
 							</table>
