--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -110,12 +110,12 @@
 							<p>Guests are encouraged to wear attire that fits a modern formal or black-tie optional dress code. Men should wear a suit with a shirt and tie or alternatively a suit jacket. Women should wear a floor-length gown, knee-length cocktail dress, a pantsuit, dressy separates, or other culturally appropriate attire. Alternatively, guests may wear medieval or renaissance period appropriate attire suitable for a prominent social gathering.</p>
 							
 							<h2 style="font-family:middleearthmedium;">Venue &amp; Lodging</h2>
-							<p>The venue (<a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Celebration Farm</a>) offers free day of (and overnight) parking. For guests attending from out of town or for local guests wishing to lodge closer to the venue, please note that the weekend coincides with the Iowa / Iowa State Football game in Iowa City so lodging in the area will be subject to higher rates and restricted availability. <b>It is highly encouraged to book accommodations early.</b> Guests may wish to consider hotel options outside of Iowa City (e.g. Cedar Rapids).</p>
+							<p><a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Celebration Farm</a> offers free day of (and overnight) parking. For guests attending from out of town or for local guests wishing to lodge closer to the venue, please note that the weekend coincides with the Iowa / Iowa State Football game in Iowa City so lodging in the area will be subject to higher rates and restricted availability. <b>It is highly encouraged to book accommodations early.</b> Guests may wish to consider hotel options outside of Iowa City (e.g. Cedar Rapids).</p>
 							
 							<h2 style="font-family:middleearthmedium;">Important Remarks</h2>
 							
 							<h3 style="font-family:middleearthmedium;">A Special Request</h3>
-							<p>All guests are encouraged to bring a historic drinking vessel for personal use throughout the evening. Examples of drinking vessels include a Viking drinking horn, wooden mug, chalice or goblet, skull of your enemy, etc.</p>
+							<p>All guests are encouraged to bring a historic drinking vessel for personal use throughout the evening. Examples of drinking vessels include a Viking drinking horn, wooden mug, chalice or goblet, skull of your enemy, etc. Mead, beer, wine, and non-alcoholic beverages will be provided free of charge.</p>
 							
 							<h3 style="font-family:middleearthmedium;">COVID Policy</h3>
 							<p>We understand that not every guest will be able join us for this special occasion. Above everything, we wish to have a safe reception. We wish to minimize the risk to our guests and also recognize that every family must make a personal choice. We will be monitoring the COVID situation and may request our guests to take additional precautions to protect each other and our little ones. Finally, we ask that any guests with COVID symptoms please do not attend.</p>
