--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -115,7 +115,7 @@
 							<h2 style="font-family:middleearthmedium;">Important Remarks</h2>
 							
 							<h3 style="font-family:middleearthmedium;">A Special Request</h3>
-							<p>All guests are encouraged to bring a historic drinking vessel for personal use throughout the evening. Examples of drinking vessels include a Viking drinking horn, wooden mug, chalice or goblet, skull of your enemy, etc. Mead, beer, wine, and non-alcoholic beverages will be provided free of charge.</p>
+							<p>Mead, beer, wine, and non-alcoholic beverages will be provided free of charge. All guests are encouraged to bring a historic drinking vessel for personal use throughout the evening. Examples of drinking vessels include a Viking drinking horn, wooden mug, chalice or goblet, skull of your enemy, etc.</p>
 							
 							<h3 style="font-family:middleearthmedium;">COVID Policy</h3>
 							<p>We understand that not every guest will be able join us for this special occasion. Above everything, we wish to have a safe reception. We wish to minimize the risk to our guests and also recognize that every family must make a personal choice. We will be monitoring the COVID situation and may request our guests to take additional precautions to protect each other and our little ones. Finally, we ask that any guests with COVID symptoms please do not attend.</p>
