--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,32 +75,33 @@
 							<center>
 							<div style="max-width:75%">
 
-							<div style="font-family:Source Sans Pro; font-size: 20px">September 9, 2022 at 3:30 PM–11:00 PM</div>
+							<div style="font-family:Source Sans Pro; font-size: 20px">September 9, 2022</div>
+							<div style="font-family:Source Sans Pro; font-size: 20px">3:30 PM–11:00 PM</div>
 							<div style="font-family:Source Sans Pro; font-size: 20px">Celebration Farm (Double Round Barn)</div>
 							<div style="font-family:Source Sans Pro; font-size: 20px"><a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">4696 Robin Woods Lane NE, Iowa City, IA, 52245</a></div>
 							<br/>
 
 							<h3 style="font-family:middleearthmedium;">Schedule</h3>
-							<table style="max-width:420px">
+							<table style="max-width:450px">
 							  <tbody>
 							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
-								<td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">3:30 PM–4:00 PM</td>
+								<td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">3:30&nbsp;PM – 4:00&nbsp;PM</td>
 							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">Arrival &amp; Seating</td>
 							  </tr>
 							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
-							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">4:00 PM–4:15 PM</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">4:00&nbsp;PM – 4:15&nbsp;PM</td>
 							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">Vow Renewal Ceremony</td>
 							  </tr>
 							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
-							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">4:30 PM–5:30 PM</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">4:30&nbsp;PM – 5:30&nbsp;PM</td>
 							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">Cocktail Hour</td>
 							  </tr>
 							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
-							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">5:30 PM–6:30 PM</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">5:30&nbsp;PM – 6:30&nbsp;PM</td>
 							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">Dinner &amp; Dessert</td>
 							  </tr>
 							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
-							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">6:30 PM–11:00 PM</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">6:30&nbsp;PM – 11:00&nbsp;PM</td>
 							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">Evening Festivities</td>
 							  </tr>
 							</tbody>
